src/test/resources/plugin/inline/pass/permission-propagation.vpr
field i: Int

inline predicate int(this: Ref) {
  acc(this.i, 1/2)
}

inline predicate intint(this: Ref) {
  acc(this.i, 1/4) && acc(int(this), 1/5)
}

method test(this: Ref)
  requires acc(intint(this), 1/3) {}
