src/test/resources/plugin/inline/errors/fold-outer.vpr
inline predicate outer()
{
    falze()
}

inline predicate falze()
{
    false
}

method test() {
    //:: ExpectedOutput(fold.failed:insufficient.permission)
    fold outer()
}